build: 分离桌面壳desktopApp